[update] advanced notebook

--- a/notebooks/2_pytorch_advanced.ipynb
+++ b/notebooks/2_pytorch_advanced.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a href=\"https://pytorch.org/\"><img src=\"https://raw.githubusercontent.com/pytorch/pytorch/master/docs/source/_static/img/pytorch-logo-dark.png\" width=\"600px\"/></a>"
+    "<img src=\"https://raw.githubusercontent.com/pytorch/pytorch/master/docs/source/_static/img/pytorch-logo-dark.png\" width=\"600px\"/>"
    ]
   },
   {
@@ -149,30 +149,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
-    "class GraySpecgramToRGB(Transform):\n",
-    "    \"\"\"Make Spectrograms RGB\"\"\"\n",
-    "    def encodes(self, x: AudioSpectrogram):\n",
-    "        return x.repeat(1, 3, 1, 1) # repeat 2nd dimension (image layers) 3 times"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "params = load_params()\n",
-    "audio2spec = AudioToSpec.from_cfg(AudioConfig.BasicMelSpectrogram(**params))\n",
-    "normalize = AudioNormalize()\n",
-    "gray2rgb = GraySpecgramToRGB()"
+    "audio2spec = AudioToSpec.from_cfg(AudioConfig.BasicMelSpectrogram(sample_rate=16000, n_fft=2048, hop_length=512, n_mels=128))\n",
+    "normalize = AudioNormalize()"
    ]
   },
   {
@@ -187,7 +166,7 @@
     "    get_x = ColReader('filename', pref=DATASET_ROOT/'audio'),\n",
     "    get_y = ColReader('category'),\n",
     "    item_tfms=[normalize],\n",
-    "    batch_tfms=[audio2spec, gray2rgb],\n",
+    "    batch_tfms=[audio2spec],\n",
     ")"
    ]
   },
@@ -247,13 +226,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -266,7 +238,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#make_xresnet_grayscale(learn.model)"
+    "make_xresnet_grayscale(learn.model)"
    ]
   },
   {
@@ -300,7 +272,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "learn.fine_tune(20)"
+    "learn.fine_tune(5)"
    ]
   },
   {
@@ -309,7 +281,7 @@
    "source": [
     "## Interpreting the Training Results\n",
     "\n",
-    "After 5 epochs of training, you should see an accuracy of ~65 %. This may not seem very good but keep in mind that we just trained the model for a couple of minutes. Also, we are working with 50 output classes! \n",
+    "After 5 epochs of training, you should see an accuracy of ~65 %. This may not seem very impressive at first but keep in mind that we just trained the model for a couple of minutes. Also, we are working with 50 output classes! \n",
     "\n",
     "If you have a look at the [original experiment](https://github.com/hasithsura/Environmental-Sound-Classification), you can see that with some further training it is easy to achieve an accuracy of over 85 %.\n",
     "\n",
@@ -378,8 +350,7 @@
     "dummy_input = torch.randn([1, 1, 128, 157])\n",
     "    \n",
     "# process the trace\n",
-    "#traced_script_module = torch.jit.trace(learn.model, dummy_input)\n",
-    "traced_script_module = torch.jit.script(learn.model)"
+    "traced_script_module = torch.jit.trace(learn.model, dummy_input)"
    ]
   },
   {
@@ -535,7 +506,7 @@
     "* `DownmixMono`: downmix stereo signals to mono\n",
     "* `ResizeSignal`: resize to exactly 5 s in length (padding or clipping if needed)\n",
     "\n",
-    "Let's define our transform pipeline, using the `normalize` and `audio2spec` transforms we defined earlier:"
+    "Let's define our transform pipeline, using the `normalize`, `audio2spec` and `gray2rgb` transforms we defined earlier:"
    ]
   },
   {
@@ -545,7 +516,7 @@
    "outputs": [],
    "source": [
     "resize_to_5s = ResizeSignal(5000, pad_mode=AudioPadType.Zeros_After)\n",
-    "resample_to_16khz = Resample(params['sample_rate'])\n",
+    "resample_to_16khz = Resample(16000)\n",
     "downmix = DownmixMono()\n",
     "\n",
     "transforms = Pipeline([AudioTensor.create, resize_to_5s, downmix, resample_to_16khz, normalize, audio2spec])"
