[refacto] rename colab notebook

--- a/notebooks/3_pytorch_advanced_colab.ipynb
+++ b/notebooks/3_pytorch_advanced_colab.ipynb
@@ -24,6 +24,26 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "!pip install -Uq ipympl\n",
+    "!pip install -Uq fastai==2.1.9\n",
+    "!pip install -Uq fastaudio==0.1.4"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "You will get some errors about incompatible versions of `jupyter-console` and `google-colab`. You can ignore these.\n",
+    "\n",
+    "To be able to use the new packages, you have to restart the runtime by clicking `Runtime` > `Restart Runtime`."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "%matplotlib widget\n",
     "import matplotlib\n",
     "matplotlib.style.use('ggplot')\n",
@@ -109,7 +129,7 @@
    "source": [
     "# Preparing the Dataset\n",
     "\n",
-    "We will use the [ESC-50](https://github.com/karolpiczak/ESC-50) (Dataset for Environmental Sound Classification) in our experiment. If you cloned this repository including the `--recurse-submodules` flag, it is already downloaded and should be present at"
+    "We will use the [ESC-50](https://github.com/karolpiczak/ESC-50) (Dataset for Environmental Sound Classification) in our experiment. Let's go ahead and download it (it's about 600 MB)."
    ]
   },
   {
@@ -121,24 +141,6 @@
     "!wget https://github.com/karoldvl/ESC-50/archive/master.zip\n",
     "!unzip -q master.zip\n",
     "DATASET_ROOT = Path('./ESC-50-master')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from helpers.dirs import DATASET_ROOT"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "print(DATASET_ROOT)"
    ]
   },
   {
@@ -233,18 +235,15 @@
    "outputs": [],
    "source": [
     "class AudioNormalize(Transform):\n",
-    "    \"Normalizes a single `AudioTensor`.\"\n",
-    "    def encodes(self, x:AudioTensor): return (x - x.mean()) / x.std()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "class GraySpecgramToRGB(Transform):\n",
-    "    \"\"\"Make Spectrograms RGB\"\"\"\n",
+    "    \"\"\"Normalize a single `AudioTensor`.\"\"\"\n",
+    "    def encodes(self, x:AudioTensor): return (x - x.mean()) / x.std()\n",
+    "\n",
+    "class SpectrogramToRGB(Transform):\n",
+    "    \"\"\"Transform spectrograms to RGB images.\n",
+    "    \n",
+    "    Stack input single-channel spectrogram 3 times to pretend\n",
+    "    it's a RGB image.\n",
+    "    \"\"\"\n",
     "    def encodes(self, x: AudioSpectrogram):\n",
     "        return x.repeat(1, 3, 1, 1) # repeat 2nd dimension (image layers) 3 times"
    ]
@@ -257,7 +256,7 @@
    "source": [
     "audio2spec = AudioToSpec.from_cfg(AudioConfig.BasicMelSpectrogram(sample_rate=16000, n_fft=2048, hop_length=512, n_mels=128))\n",
     "normalize = AudioNormalize()\n",
-    "gray2rgb = GraySpecgramToRGB()"
+    "gray2rgb = SpectrogramToRGB()"
    ]
   },
   {
