[update] clone repo from colab notebook

--- a/notebooks/3_pytorch_advanced_colab.ipynb
+++ b/notebooks/3_pytorch_advanced_colab.ipynb
@@ -19,6 +19,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Install missing packages"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -39,33 +46,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "%matplotlib widget\n",
-    "import matplotlib\n",
-    "matplotlib.style.use('ggplot')\n",
-    "import matplotlib.pyplot as plt\n",
-    "\n",
-    "import numpy as np\n",
-    "import pandas as pd\n",
-    "import ipywidgets as widgets\n",
-    "import librosa\n",
-    "import tempfile\n",
-    "\n",
-    "import warnings\n",
-    "warnings.filterwarnings('ignore', category=UserWarning)\n",
-    "\n",
-    "import torch\n",
-    "import torchvision\n",
-    "\n",
-    "from fastai.vision.all import *\n",
-    "from fastai.data.all import *\n",
-    "from fastai.metrics import accuracy\n",
-    "from fastaudio.core.all import *\n",
-    "from fastaudio.augment.signal import AudioPadType"
+    "### Clone repo for supplemental files"
    ]
   },
   {
@@ -74,41 +58,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def print_top_results(test_sample_idx, preds, labels, vocab, show_max=5):\n",
-    "    \"\"\"Print top results for a single test sample\"\"\"\n",
-    "    idx_sort = preds[test_sample_idx].argsort(descending=True)\n",
-    "    print(f'Top {show_max} results for sample \\'{labels[test_sample_idx]}\\':')\n",
-    "    for rank,i in enumerate(idx_sort[:show_max]):\n",
-    "        print(f'    [#{rank+1}] {vocab[i]} ({preds[test_sample_idx][i]:.2f})')\n",
+    "!git clone --recurse-submodules https://github.com/1enn0/intro-ml-with-pytorch.git\n",
+    "import sys\n",
+    "sys.path.append('./intro-ml-with-pytorch/notebooks')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%matplotlib widget\n",
     "\n",
-    "\n",
-    "def plot_top_results (preds_softmax, vocab, title=None, show_max=5, figsize=None):\n",
-    "    \"\"\"Plot horizontal bar plot showing top classification results.\"\"\"\n",
-    "    figsize = figsize or (5, 2)\n",
-    "    fig, ax = plt.subplots(figsize=figsize)\n",
-    "    \n",
-    "    show_max = show_max or len(preds_softmax)\n",
-    "    idx_sort = preds_softmax.argsort(descending=True)\n",
-    "    \n",
-    "    x = np.arange(show_max)\n",
-    "    if title is not None:\n",
-    "        ax.set_title(title)\n",
-    "    ax.barh(x[::-1], preds_softmax[idx_sort[:show_max]])\n",
-    "    ax.set_xlabel('p')\n",
-    "    ax.set_ylabel('Category')\n",
-    "    ax.set_xlim([0, 1])\n",
-    "    ax.set_yticks(x)\n",
-    "    ax.set_yticklabels(vocab[idx_sort[:show_max]][::-1])\n",
-    "    \n",
-    "    return fig, ax\n",
-    "\n",
-    "def write_vocab_cpp_header (vocab):\n",
-    "    \"\"\"Write C++ header file to containing a std::vector with the elements from `vocab`\"\"\"\n",
-    "    with open(CPP_SOURCE_DIR/'src/vocab-gen.h', 'w') as f:\n",
-    "        f.write('// This is a generated file. Manual changes will be overwritten!!!\\n')\n",
-    "        f.write('#include <vector>\\n#include <string>\\n#pragma once\\n\\nconst std::vector<std::string> vocab {{\\n')\n",
-    "        f.writelines([f'\\t{{\\\"{word}\\\"}},\\n' for word in vocab])\n",
-    "        f.write('}};')"
+    "from helpers.all import *"
    ]
   },
   {
@@ -129,7 +92,7 @@
    "source": [
     "# Preparing the Dataset\n",
     "\n",
-    "We will use the [ESC-50](https://github.com/karolpiczak/ESC-50) (Dataset for Environmental Sound Classification) in our experiment. Let's go ahead and download it (it's about 600 MB)."
+    "We will use the [ESC-50](https://github.com/karolpiczak/ESC-50) (Dataset for Environmental Sound Classification) in our experiment. If you cloned this repository including the `--recurse-submodules` flag, it is already downloaded and should be present at"
    ]
   },
   {
@@ -138,9 +101,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!wget https://github.com/karoldvl/ESC-50/archive/master.zip\n",
-    "!unzip -q master.zip\n",
-    "DATASET_ROOT = Path('./ESC-50-master')"
+    "print(DATASET_ROOT)"
    ]
   },
   {
@@ -234,29 +195,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "class AudioNormalize(Transform):\n",
-    "    \"\"\"Normalize a single `AudioTensor`.\"\"\"\n",
-    "    def encodes(self, x:AudioTensor): return (x - x.mean()) / x.std()\n",
-    "\n",
-    "class SpectrogramToRGB(Transform):\n",
-    "    \"\"\"Transform spectrograms to RGB images.\n",
-    "    \n",
-    "    Stack input single-channel spectrogram 3 times to pretend\n",
-    "    it's a RGB image.\n",
-    "    \"\"\"\n",
-    "    def encodes(self, x: AudioSpectrogram):\n",
-    "        return x.repeat(1, 3, 1, 1) # repeat 2nd dimension (image layers) 3 times"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "audio2spec = AudioToSpec.from_cfg(AudioConfig.BasicMelSpectrogram(sample_rate=16000, n_fft=2048, hop_length=512, n_mels=128))\n",
-    "normalize = AudioNormalize()\n",
-    "gray2rgb = SpectrogramToRGB()"
+    "normalize = AudioNormalize()"
    ]
   },
   {
@@ -271,7 +211,7 @@
     "    get_x = ColReader('filename', pref=DATASET_ROOT/'audio'),\n",
     "    get_y = ColReader('category'),\n",
     "    item_tfms=[normalize],\n",
-    "    batch_tfms=[audio2spec, gray2rgb],\n",
+    "    batch_tfms=[audio2spec],\n",
     ")"
    ]
   },
@@ -331,13 +271,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -350,7 +283,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#make_xresnet_grayscale(learn.model)"
+    "make_xresnet_grayscale(learn.model)"
    ]
   },
   {
@@ -384,7 +317,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "learn.fine_tune(1)"
+    "learn.fine_tune(5)"
    ]
   },
   {
@@ -462,8 +395,7 @@
     "dummy_input = torch.randn([1, 1, 128, 157])\n",
     "    \n",
     "# process the trace\n",
-    "#traced_script_module = torch.jit.trace(learn.model, dummy_input)\n",
-    "traced_script_module = torch.jit.script(learn.model)"
+    "traced_script_module = torch.jit.trace(learn.model, dummy_input)"
    ]
   },
   {
@@ -618,7 +550,7 @@
    "outputs": [],
    "source": [
     "resize_to_5s = ResizeSignal(5000, pad_mode=AudioPadType.Zeros_After)\n",
-    "resample_to_16khz = Resample(params['sample_rate'])\n",
+    "resample_to_16khz = Resample(16000)\n",
     "downmix = DownmixMono()\n",
     "\n",
     "transforms = Pipeline([AudioTensor.create, resize_to_5s, downmix, resample_to_16khz, normalize, audio2spec])"
