[fix] some issues in colab notebook

--- a/notebooks/3_pytorch_advanced_colab.ipynb
+++ b/notebooks/3_pytorch_advanced_colab.ipynb
@@ -31,7 +31,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!pip install -Uq ipympl\n",
     "!pip install -Uq fastai==2.1.9\n",
     "!pip install -Uq fastaudio==0.1.4"
    ]
@@ -58,9 +57,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!git clone --recurse-submodules https://github.com/1enn0/intro-ml-with-pytorch.git\n",
-    "import sys\n",
-    "sys.path.append('./intro-ml-with-pytorch/notebooks')"
+    "!git clone --recurse-submodules https://github.com/1enn0/intro-ml-with-pytorch.git"
    ]
   },
   {
@@ -69,7 +66,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%matplotlib widget\n",
+    "import sys\n",
+    "sys.path.append('./intro-ml-with-pytorch/notebooks')\n",
     "\n",
     "from helpers.all import *"
    ]
@@ -339,7 +337,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "interp = ClassificationInterpretation.from_learner(learn)\n",
+    "interp = ClassificationInterpretation.from_learner(learn)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "interp.plot_confusion_matrix(figsize=(10, 10))"
    ]
   },
@@ -404,7 +410,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "torch.jit.save(traced_script_module, './esc-model.pt')"
+    "# create output dir if it doesn't exist\n",
+    "if not MODEL_DIR.exists():\n",
+    "    MODEL_DIR.mkdir()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "torch.jit.save(traced_script_module, str(MODEL_DIR/'esc-model.pt'))"
    ]
   },
   {
@@ -653,7 +670,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!cmake -S {CPP_SOURCE_DIR} -B {CPP_BUILD_DIR} -DCMAKE_PREFIX_PATH={torch.utils.cmake_prefix_path}"
+    "!pushd {CPP_BUILD_DIR} && cmake .. -DCMAKE_PREFIX_PATH={torch.utils.cmake_prefix_path} && popd"
    ]
   },
   {
