[update] add some extra info

--- a/notebooks/3_pytorch_advanced_colab.ipynb
+++ b/notebooks/3_pytorch_advanced_colab.ipynb
@@ -22,7 +22,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Install missing packages"
+    "## Colab-specific Setup\n",
+    "\n",
+    "#### Change runtime to GPU\n",
+    "Click on `Runtime` > `Change runtime type`, select GPU in the dropdown and click save."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Install missing packages\n",
+    "\n",
+    "We need to install some packages that are not included in the standard Colab environment.\n",
+    "\n",
+    "You will get some errors about incompatible versions of `jupyter-console` and `google-colab`. You can ignore these."
    ]
   },
   {
@@ -39,8 +53,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "You will get some errors about incompatible versions of `jupyter-console` and `google-colab`. You can ignore these.\n",
-    "\n",
     "To be able to use the new packages, you have to restart the runtime by clicking `Runtime` > `Restart Runtime`."
    ]
   },
@@ -48,7 +60,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Clone repo for supplemental files"
+    "#### Clone repo for supplemental files"
    ]
   },
   {
