[fix] small stuff

--- a/notebooks/3_pytorch_advanced_colab.ipynb
+++ b/notebooks/3_pytorch_advanced_colab.ipynb
@@ -231,7 +231,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dls = block.dataloaders(df, num_workers=0) # on windows, num_workers needs to be set to 0\n",
+    "dls = block.dataloaders(df)\n",
     "# dls.show_batch(figsize=(7,7))"
    ]
   },
