[update] fix cmake command for cmake < 3.14

--- a/notebooks/2_pytorch_advanced.ipynb
+++ b/notebooks/2_pytorch_advanced.ipynb
@@ -619,7 +619,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!cmake -S {CPP_SOURCE_DIR} -B {CPP_BUILD_DIR} -DCMAKE_PREFIX_PATH={torch.utils.cmake_prefix_path}"
+    "CPP_SOURCE_DIR"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!cmake -S {CPP_SOURCE_DIR} -B {CPP_BUILD_DIR} -DCMAKE_PREFIX_PATH={torch.utils.cmake_prefix_path}\n",
+    "\n",
+    "# if you're running cmake < 3.14, comment out the previous command and run the following instead\n",
+    "# !pushd {CPP_BUILD_DIR} && cmake .. -DCMAKE_PREFIX_PATH={torch.utils.cmake_prefix_path} && popd"
    ]
   },
   {
